// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders 1`] = `
<input
  className="form-control"
  name="zipcode"
  type="text"
/>
`;

exports[`TextInput renders block 1`] = `
<input
  className="form-control input-block"
  name="zipcode"
  type="text"
/>
`;

exports[`TextInput renders large 1`] = `
<input
  className="form-control input-lg"
  name="zipcode"
  type="text"
/>
`;

exports[`TextInput renders small 1`] = `
<input
  className="form-control input-sm"
  name="zipcode"
  type="text"
/>
`;
